InputLabel alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.form-input-label {
+  display: inline-block;
+  margin: 5px 0 0 4px;
+}
